# teensy-ambisonic-microphone-array

./: .gitignore  AudioOutputTDM_Slave.cpp  AudioOutputTDM_Slave.h  CLAUDE.md  README.md  TODO.md  master.ino  package-lock.json  teensy_ambisonic_microphone.ino
.claude/: settings.local.json
host_src/: README.md  TODO.md  array_geometry.json  audio_capture.py  doa_processing.py  doa_visualizer.py  realtime_beamformer.py  requirements.txt  sound_classifier.py  test_beamformer.py
mechanical/: assembly_instructions.md  desktop_mount.scad  generate_stl.py  parametric_frame.scad  parametric_frame_v2.scad  tetrahedron_frame.json  tetrahedron_frame.scad  tetrahedron_frame.stl  tetrahedron_frame_150mm.stl
odas_py/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
odas_py/build-scripts/: README.md  build.sh  build_release.sh  build_release_windows.sh  build_windows.ps1  build_windows.sh  build_windows_from_wsl.sh  download_mingw_portable.py  package_release.sh  setup_cross_compile.py  setup_windows_prebuild.py  toolchain-mingw-portable.cmake
odas_py/build-windows/: Makefile
odas_py/cmake/: mingw-toolchain.cmake
odas_py/docs/: AUDIO_CAPTURE.md  BUILD.md  BUILD_WINDOWS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LIVE_AUDIO.md  PROGRESS.md  PYTHON_ODASLIVE.md  QUICKSTART.md  QUICKSTART_SSS.md  README.md  SOUND_SEPARATION_ROADMAP.md  STATUS.md  TODO.md  WINDOWS_SUCCESS.md  install_mingw_windows.md
odas_py/examples/: basic_usage.py  config_based_usage.py  example_capture_audio.py  example_live_audio.py  example_quickstart.py  example_separation.py  python_odaslive.py  wav_file_processing.py
odas_py/examples/config/: tetrahedral_4ch.cfg
odas_py/include/: odas_wrapper.h
odas_py/odas_py/: __init__.py  odas_processor.py  odaslive.py
odas_py/src/: odas_core.c  odas_modules.c  odas_wrapper.c
odas_py/tests/: check_python.py  debug_stft.py  test_audio_capture.py  test_live_audio.py  test_live_debug.py  test_pyaudio_raw.py  test_ssl.py  test_ssl_basic.py  test_sss.py  test_sst.py  test_structure.py  test_tracking.py  test_windows.py
patches/: usb_desc.h
pcb/: fp-info-cache  mic-NPTH.drl  mic-PTH.drl  mic.dsn  mic.kicad_pcb  mic.kicad_prl  mic.kicad_pro  mic.kicad_sch
pcb/grbr/: mic-NPTH-drl.gbr  mic-NPTH-drl_map.gbr  mic-PTH-drl.gbr  mic-PTH-drl_map.gbr
pcb/grbr2/: mic-B_Cu.gbl  mic-B_Mask.gbs  mic-B_Paste.gbp  mic-B_Silkscreen.gbo  mic-Edge_Cuts.gm1  mic-F_Cu.gtl  mic-F_Mask.gts  mic-F_Paste.gtp  mic-F_Silkscreen.gto  mic-In1_Cu.g1  mic-In2_Cu.g2  mic-NPTH-drl.gbr  mic-NPTH-drl_map.gbr
pcb/grbr2-drill/: mic-PTH-drl.gbr  mic-PTH-drl_map.gbr
pcb/no-traces/: mic.dsn  mic2.kicad_pcb  mic2.kicad_pro
teensy_src/: TODO.md  slave.ino  teensy_ambisonic_microphone.ino
teensy_src/patches/: usb_audio.cpp  usb_audio.h  usb_desc.c  usb_desc.h
windows_odas_app/: CMakeLists.txt  build_mingw.sh  build_windows.bat  test_audio.c  test_simple.c  test_wasapi.c
windows_odas_app/build-debug/: CMakeCache.txt
windows_odas_app/config/: tetrahedral_4ch.cfg
windows_odas_app/include/: tetrahedral_mic_array.h
windows_odas_app/src/: array_geometry.c  audio_capture.c  audio_capture_platform.h  doa_processing.c  main.c  wasapi_guids.c
