[metadata]
name = odas-py
version = attr: odas_py.version.__version__
description = Python bindings for ODAS (Open embeddeD Audition System)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/odas_py
author = ODAS-Py Contributors
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Analysis
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.19.0

[options.packages.find]
where = .
include = odas_py*